@@ -1,5 +1,3 @@
-Remove deprecated SecondOrderModel::getDimension, getSpatialDimension in 1.12
-Remove deprecated Function ctors in 1.12
 Remove deprecated Sample,SampleImplementation::operator*(SquareMatrix) and operator/(SquareMatrix) (and in-place operators) in 1.12
 Remove deprecated SampleImplementation::scale(SquareMatrix) in 1.12
 Remove deprecated Domain(a, b) constructor in 1.12
